# external-odc-products

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  environment.yaml  jupyter_lab_config.py  pyproject.toml  wapor_mapsets_table.csv
products/: esa_worldcereal_wintercereals_tc_wintercereals.odc-product.yaml  s3_olci_lfr.odc-product.yaml  wapor_monthly_npp.odc-product.yaml
src/external_odc_products_py/: crop_cogs.py  crop_images.py  download_esa_worldcereal_cogs.py  download_wapor_v3_cogs.py  easi_assemble.py  fs_to_dc.py  io.py  iwmi_odr.py  s3_to_dc.py  stac.py  stac_to_eo3.py  storage_parameters.py  utils.py  wapor_v3.py
src/external_odc_products_py/esa_worldcereal/: create_stac.py  download_cogs.py  main.py  prepare_metadata.py
src/external_odc_products_py/iwmi_odr/: create_stac.py  main.py
src/external_odc_products_py/s3_olci_lfr/: fix_stac_files.py
src/external_odc_products_py/tools/: fix_stac_files.py  fs_to_dc.py  fs_to_dc_v2.py  main.py  s3_to_dc.py  s3_to_dc_v2.py
src/external_odc_products_py/wapor_v3/: create_stac.py  download_cogs.py  main.py  prepare_metadata.py
workflows/: add_products.sh  index_datasets.sh
