[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "external-odc-products-py"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies= [
    "aiobotocore[boto3,awscli]",
    "click",
    "datacube==1.8.20",
    "eodatasets3==0.30.9", # latest version compatible with datacube 1.8.x
    "fsspec[full]",
    "gcsfs",
    "geopandas",
    "odc-cloud[ASYNC]",
    "pandas==2.1.4", # due to sqalchemy dependency for datacube 1.8.x
    "pyyaml",
    "rasterio",
    "rioxarray",
    "rio-cogeo",
    "tqdm",
    "yamllint"
]

[project.optional-dependencies]
lint = [
    "black[jupyter]",
    "flake8",
    "isort>=5.0.0",
    "pre-commit",
]

[project.scripts]
create-stac-files = "external_odc_products_py.stac:create_stac_files"
get-storage-parameters = "external_odc_products_py.storage_parameters:get_storage_parameters"
download-wapor-v3-cogs = "external_odc_products_py.download_wapor_v3_cogs:download_wapor_v3_cogs"

# ESA WorldCereal 10 m 2021 v100
download-esa-worldcereal-cogs = "external_odc_products_py.esa_worldcereal.download_cogs:download_esa_worldcereal_cogs"
create-esa-wordlcereal-stac = "external_odc_products_py.esa_worldcereal.create_stac:create_esa_worldcereal_stac"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
extend-exclude = '''
src/external_odc_products_py/eo3assemble/easi_prepare_template\.py
'''
