[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "external-odc-products-py"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies= [
    "aiobotocore[boto3,awscli]",
    "click",
    "datacube==1.8.20",
    "eodatasets3==0.30.9", # latest version compatible with datacube 1.8.x
    "fsspec[full]",
    "gcsfs",
    "geopandas",
    "matplotlib",
    "memory-profiler",
    "odc-cloud[ASYNC]",
    "pandas==2.1.4", # due to sqalchemy dependency for datacube 1.8.x
    "pyyaml",
    "rasterio",
    "rioxarray",
    "rio-cogeo",
    "tqdm",
    "yamllint"
]

[project.optional-dependencies]
lint = [
    "black[jupyter]",
    "flake8",
    "isort>=5.0.0",
    "pre-commit",
]

[project.scripts]
esa-worldcereal = "external_odc_products_py.esa_worldcereal.main:esa_worldcereal"
wapor-v3 = "external_odc_products_py.wapor_v3.main:wapor_v3"
iwmi-odr = "external_odc_products_py.iwmi_odr.main:iwmi_odr"
get-storage-parameters = "external_odc_products_py.storage_parameters:get_storage_parameters"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
extend-exclude = '''
src/external_odc_products_py/eo3assemble/easi_prepare_template\.py
'''
